force-app/main/default/objects/BDL_Obligation_Payment__c/BDL_Obligation_Payment__c.object-meta.xml
<CustomObject>
    <description>Payments that are recorded for this obligation. Integrations with financial systems can be setup.
Demen S. 27th March 2023.</description>
    <label>Obligation Payment</label>
    <nameField>
        <displayFormat>OP-{00000}</displayFormat>
        <label>Obligation Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Obligation Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>