force-app/main/default/objects/BDL_Obligation_Payment__c/fields/BDL_Amount__c.field-meta.xml
<CustomField>
    <fullName>BDL_Amount__c</fullName>
    <description>Payment amount. Can be integrated with financial systems.
Demen S. 27th March 2023.</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>