force-app/main/default/objects/BDL_Obligation_Payment__c/fields/BDL_Date_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>BDL_Date_of_Payment__c</fullName>
    <description>Date when payment is recorded.
Demen S. 27th March 2023.</description>
    <label>Date of Payment</label>
    <type>Date</type>
</CustomField>