force-app/main/default/objects/BDL_Obligation_Payment__c/fields/BDL_Obligation__c.field-meta.xml
<CustomField>
    <fullName>BDL_Obligation__c</fullName>
    <description>The master obligation for this payment record.
Demen S. 27th March 2023.</description>
    <label>Obligation</label>
    <referenceTo>BDL_Obligation__c</referenceTo>
    <relationshipLabel>Obligation Payments</relationshipLabel>
    <relationshipName>Obligation_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>