force-app/main/default/objects/BDL_Obligation_Payment__c/fields/BDL_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>BDL_Payment_Status__c</fullName>
    <description>Status of particular payment.
Demen S. 27th March 2023.</description>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>